# off-grid-ultrasound

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_ablation_study.py  run_example.py  run_generate_paper_results.py  run_generate_plots.py  subselect_data.py
config/sweep-batch-size/: batchsize0064.yaml  batchsize0256.yaml  batchsize1024.yaml  batchsize4096.yaml
config/sweep-learning-rate/: learning_rate1.0e-01.yaml  learning_rate1.0e-02.yaml  learning_rate1.0e-03.yaml
config/sweep-noise/: noise0.00000.yaml  noise0.00010.yaml  noise0.00100.yaml  noise0.01000.yaml  noise0.10000.yaml  noise1.00000.yaml  noise10.00000.yaml
config/sweep-scatterer-density/: nooptim_density0.5.yaml  nooptim_density1.0.yaml  nooptim_density2.0.yaml  nooptim_density4.0.yaml  yesoptim_density0.5.yaml  yesoptim_density1.0.yaml  yesoptim_density2.0.yaml  yesoptim_density4.0.yaml
config/sweep-sound-speed-offset-simulated/: sound_speed_offset-0020.yaml  sound_speed_offset-0040.yaml  sound_speed_offset-0060.yaml  sound_speed_offset-0080.yaml  sound_speed_offset-0100.yaml  sound_speed_offset-0120.yaml  sound_speed_offset-0140.yaml  sound_speed_offset-0160.yaml  sound_speed_offset-0180.yaml  sound_speed_offset-0200.yaml  sound_speed_offset00000.yaml  sound_speed_offset00020.yaml  sound_speed_offset00040.yaml  sound_speed_offset00060.yaml  sound_speed_offset00080.yaml  (+6 more)
infer/: __init__.py  goudarzi.py  infer.py  simulate.py  waveforms.py
shell/: get-data.sh
src/: __init__.py  plot_gcnr.py  plot_reconstruction.py  plot_side_by_side.py
(+84 files in other folders)
